src/components/Portfolio.css
.portfolio {
    display: flex;
    flex-direction: column;
    text-align: center;
}

.header {
    background-color: #282c34;
    text-align: center;

    min-height: 100vh;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    font-size: calc(10px + 2vmin);
    color: white;
}

.short {
    max-width: 800px;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;

    padding: 100px 0;
    margin: 0 auto;
}

.logo {
    width: 60vmin;
    height: auto;
}

